tests/should_fail/type_bool_plus_int.nv
module type_add_bool_to_int

import super.std.core

// Bool + Int is not supported
let x = true + 1
